# computer-use-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  fluxbox-menu  pyproject.toml
src/computer_use_agent/: __init__.py  agent.py  captcha.py  config.py  human_loop.py  main.py
src/computer_use_agent/tools/: __init__.py  base.py  bash.py  computer.py  credential.py
tests/: __init__.py
